# Cmake

./: CMakeLists.txt  CMakePresets.json  compile.sh  main.cpp  pj_config.h.in  readme.md
Math_Library/: CMakeLists.txt  my_math.cpp  my_math.h
